--- a/pilotfish/style.css
+++ b/pilotfish/style.css
@@ -1,12 +1,12 @@
 /* 
 Theme Name: Pilot Fish 
 Theme URI: http://wordpress.danielatwork.com/pilotfish
-Description: minimal, full width, portfolio, responsive design with one custom post type and parallax scrolling
+Description: *EDIT*, Minimal, full width, portfolio, responsive design with one custom post type and parallax scrolling. Version 0.3.2 has include Chinese, Japanese and Spanish translations.
 
 Author: Daniel Zhao
 Author URI: http://danielatwork.com/
 Version: 0.3.2 
-Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, featured-images, flexible-width, full-width-template, theme-options
+Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, featured-images, flexible-width, full-width-template, post-formats, theme-options, translation-ready
 	
 License: GNU General Public License (GPL)
 License URI: license.txt
@@ -26,6 +26,7 @@ License URI: license.txt
 	10 - Pagination
 	11 - Footer
 	12 - Misc
+	13 - Media Queries
 */
 
 /* 01 - Reset & Basics (Inspired by E. Meyers)
@@ -449,6 +450,7 @@ License URI: license.txt
 	#header #logo {
 		float:left;
 		margin-bottom: 20px;
+		padding-left: 10px;
 }
 	#header #logo .site-name {
 		display:block;
@@ -666,6 +668,17 @@ License URI: license.txt
 		margin-top: 30px;
 		margin-bottom: 50px;
 }
+	.post-entry .attachment-post-thumbnail {
+		float: left;
+		background: none repeat scroll 0 0 #EEEDEE;
+    		border: 1px solid #E5E5E5;
+    		border-radius: 3px 3px 3px 3px;
+    		margin-right: 20px;
+    		padding: 5px;
+}
+	.post-entry p {
+/*		float: left;*/
+}
 	.post-meta,
 	.logged-in-as,
 	.pagination {
@@ -705,10 +718,78 @@ License URI: license.txt
 		border-top: 1px solid #ddd;
 		padding: 6px 10px 6px 0;
 }
+	.page-hierarchy {
+		padding-top: 30px;
+}
 	embed,
 	iframe {
 		max-width: 95%;
 }
+/* 	Aside Format 	*/
+/* 	Gallery Format 	*/
+	.format-aside header,
+	#content .format-gallery .post-meta {
+		display: none;
+}
+
+/* 	Quote Format 	*/
+	#content .format-quote header,
+	#content .format-quote .post-meta,
+	#content .format-status header,
+	#content .format-status .post-meta {
+		display: none;
+}
+	.format-quote blockquote {
+/*		background: #ff3300;
+		min-height: 45px;
+		padding: 12px 15px 12px 80px;*/
+}
+	.format-quote blockquote p {
+/*		color: #fff;*/
+		font: italic 1.8em/1.3 "Hoefler Text",Constantia,"Adobe Garamond Pro","Garamond",Georgia,"Times New Roman",Times,serif;
+/*		margin: 0;*/
+}
+	.format-quote blockquote a {
+/*		color: #fff;*/
+		opacity: 0.8;
+		border-color: #fff;
+}
+	.format-quote blockquote a:hover,
+	.format-quote blockquote a:focus,
+	.format-quote blockquote a:active {
+		background: none;
+/*		color: #fff;*/
+		opacity: .95;
+		border-bottom: 1px solid #fff;
+}
+	.format-image .postbody .content .frame .wrapper img.alignleft {
+		float:none;
+}
+	.format-image .postbody .content .frame .wrapper img.alignright {
+		float:none;
+}
+/* 	Status Format	*/
+	.format-status h1 {
+		display: none;
+}
+	.format-image .post-entry {
+		margin-left:60px;
+		margin-right:24px;
+}
+	.format-image .post-entry p {
+		color:#777;
+		font-size:13px;
+}
+	.format-image .post-entry p img {
+		display:none;
+}
+	.format-link header:after {
+		content:"\2192";
+		color:#a3b7ba;
+		padding-left:10px;
+		text-decoration:none;
+}
+
 /*	Thumbnails List	*/
 	#thumbnail {
 		width: 100%;
@@ -1174,13 +1255,14 @@ License URI: license.txt
 		-moz-overflow-x: auto;
 		-o-overflow-x: auto;
   	}
+  	#header #logo { width: 100%; }
   	.page-header h1 small {
     		display: block;
     		line-height: 18px;
   	}
   	#container,
   	#footer {
-    		width: auto;
+    		width: 320px !important;
   	}
   	.span12, 
   	.span8,
@@ -1351,4 +1433,17 @@ License URI: license.txt
   	.span3 {
     		width: 220px;
   	}
+}
+
+@media print {
+	#featured { display: none; }
+	#access { display: none; }
+	#article { display: block; }
+	.last #widgets,
+	#widgets-footer {
+		display: none;
+	}
+	.span12, .span8 {
+		width: 96%;
+	}
 }
