update theme options

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Description: Pilot Fish is an elegant portfolio theme with minimal design, featu
 Author: Daniel Zhao
 Author URI: http://danielatwork.com/
 Version: 0.3.3 
-Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, right-sidebar, featured-images, flexible-width, full-width-template, post-formats, translation-ready
+Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, right-sidebar, featured-images, flexible-width, full-width-template, post-formats, translation-ready, theme-options, blavatar
 	
 License: GNU General Public License (GPL)
 License URI: license.txt
